[package]
name = "reilly-bot"
version = "0.1.0"
authors = ["Patrick O'Brien <patrick.obrien@pob.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.*"
kankyo = "0.3.*"
log = "0.4"
tokio = { version = "0.2", features = ["macros"] }

[dependencies.serenity]
version = "0.9.0-rc.1"
features = ["cache", "framework", "standard_framework", "rustls_backend"]


